# MMM-Simple-Swiper

./: .clang-format  .eslintrc.js  .gitignore  CMakeLists.txt  MMM-Simple-Swiper.js  MMM-simple-swiper.js  Makefile  README.org  Sensor.cpp  Sensor.h  compile_commands.json  debug.sh  debug_parameters.json  main.c  main.cpp  node_helper.js  package.json  swiper.c  swiper.cpp  swiper.h  tags
.ccls-cache/@@home@bpm@Development@github@MMM-Simple-Swiper/: @usr@include@alloca.h.blob  @usr@include@arpa@inet.h.blob  @usr@include@asm-generic@errno-base.h.blob  @usr@include@asm-generic@errno.h.blob  @usr@include@asm-generic@ioctl.h.blob  @usr@include@asm-generic@ioctls.h.blob  @usr@include@asm-generic@socket.h.blob  @usr@include@asm-generic@sockios.h.blob  @usr@include@assert.h.blob  @usr@include@boost@asio.hpp.blob  @usr@include@boost@asio@async_result.hpp.blob  @usr@include@boost@asio@basic_datagram_socket.hpp.blob  @usr@include@boost@asio@basic_deadline_timer.hpp.blob  @usr@include@boost@asio@basic_io_object.hpp.blob  @usr@include@boost@asio@basic_raw_socket.hpp.blob  @usr@include@boost@asio@basic_seq_packet_socket.hpp.blob  @usr@include@boost@asio@basic_serial_port.hpp.blob  @usr@include@boost@asio@basic_signal_set.hpp.blob  @usr@include@boost@asio@basic_socket.hpp.blob  @usr@include@boost@asio@basic_socket_acceptor.hpp.blob  @usr@include@boost@asio@basic_socket_iostream.hpp.blob  @usr@include@boost@asio@basic_socket_streambuf.hpp.blob  @usr@include@boost@asio@basic_stream_socket.hpp.blob  @usr@include@boost@asio@basic_streambuf.hpp.blob  @usr@include@boost@asio@basic_streambuf_fwd.hpp.blob  @usr@include@boost@asio@basic_waitable_timer.hpp.blob  (+1291 more)
CXX/: Sensor.cpp  Sensor.h  main.cpp  swiper.cpp  swiper.h  tags
sample-config-file/: SAMPLE_CONFIG.js
scripts/: build.sh  install-dependencies.sh
src/: Makefile  Sensor.cpp  Sensor.h  main.cpp  output  swiper.cpp  swiper.h
step-by-step-instructions/: SAMPLE_CONFIG.js  instructions.org
(+1335 files in other folders)
